<resources>
    <string name="app_name">UbiBike</string>
    <string name="station">Station</string>
    <string name="location">Location</string>
    <string name="bikes_available_text">bikes available</string>
    <string name="btn_book_bike">Book one bike</string>
    <string name="Register">Register</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="History">History</string>
    <string name="Friends">Friends</string>
    <string name="Chat">Chat</string>
    <string name="Stations">Stations</string>
    <string name="getting_the_nearest_station">Getting the nearest station</string>
    <string name="connect_internet">Please connect to the Internet</string>
    <string name="server_not">Sorry, server is not responding.</string>
    <string name="secret_key_to_send_point_to_your_friends">Secret key (to send points to your friends)</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="not_validated">Points not validated</string>
    <string name="points_validated">"Points successfully validated, you have more "</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="login_failed">Login failed. Try again.</string>
    <string name="registration">Unable to complete the registration</string>
    <string name="successfull_register">Registered successfully</string>
    <string name="fill_form">Fill the form</string>
    <string name="demo_email">demo@demo.com</string>
    <string name="demo_pass">demo</string>
    <string name="sry">Sorry. Impossible to book a bike.</string>
    <string name="title_activity_display_route">Map</string>
    <string name="stations_not">Stations not available. Refresh this page.</string>
    <string name="closer_station_not_available">Closest station not available. Refresh this page.</string>
    <string name="send">Send</string>
    <string name="see_trajectory">See Trajectory</string>
    <string name="distance">Distance:</string>
    <string name="points">Points:</string>
    <string name="time">Time:</string>
    <string name="to">To:</string>
    <string name="talk">Talk</string>
    <string name="send_points">Send points</string>
    <string name="date">Date:</string>
    <string name="return_bike">Please return the another bike.</string>
</resources>
