<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_station_img"
        android:layout_gravity="center_horizontal|top"
        android:background="@color/divider"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/localizationIcon"
            android:contentDescription="@string/location"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_place_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_text"
            android:id="@+id/stationNameDetails"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_text"
            android:id="@+id/bikesAvailable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bikes_available_text"
            android:textColor="@color/secondary_text"
            android:id="@+id/bikesAvailableText" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/detailsItems" />

    <Button
        android:id="@+id/bookBtn"
        android:layout_width="@dimen/std_width_btn"
        android:layout_height="wrap_content"
        android:text="@string/btn_book_bike"
        android:layout_marginTop="@dimen/std_top_btn"
        android:layout_centerHorizontal="true"
        android:onClick="onClickBookBike"
        android:layout_below="@+id/detailsItems"
        android:drawableLeft="@drawable/ic_directions_bike_24dp"
        android:background="@drawable/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/messageDetails"
        android:textColor="@color/secondary_text"
        android:layout_marginTop="23dp"
        android:text="@string/closer_station_not_available"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_alignTop="@+id/detailsItems"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>